--- a/src/index.html
+++ b/src/index.html
@@ -13,28 +13,28 @@
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://biomind.franciscolarrosa.dev/">
+  <meta property="og:url" content="https://franciscolarrosa96.github.io/BioMind/">
   <meta property="og:title" content="BioMind - Análisis Médicos Inteligentes con IA">
   <meta property="og:description" content="Plataforma que utiliza IA para analizar estudios médicos y proporcionar interpretaciones claras. Desarrollado con Angular 20 y Google Gemini AI.">
-  <meta property="og:image" content="https://biomind.franciscolarrosa.dev/assets/og-image.png">
+  <meta property="og:image" content="https://franciscolarrosa96.github.io/BioMind/assets/previa.png">
   <meta property="og:site_name" content="BioMind">
   <meta property="og:locale" content="es_AR">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://biomind.franciscolarrosa.dev/">
+  <meta name="twitter:url" content="https://franciscolarrosa96.github.io/BioMind/">
   <meta name="twitter:title" content="BioMind - Análisis Médicos Inteligentes con IA">
   <meta name="twitter:description" content="Plataforma que utiliza IA para analizar estudios médicos y proporcionar interpretaciones claras en segundos.">
-  <meta name="twitter:image" content="https://biomind.franciscolarrosa.dev/assets/twitter-card.png">
+  <meta name="twitter:image" content="https://franciscolarrosa96.github.io/BioMind/assets/previa.png">
   <meta name="twitter:creator" content="@FranciscoLarrosa">
   
   <!-- Favicon -->
-  <base href="/">
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-  <link rel="manifest" href="/manifest.json">
+  <base href="/BioMind/">
+  <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  <link rel="manifest" href="manifest.json">
   
   <!-- Theme Color -->
   <meta name="theme-color" content="#0891b2" media="(prefers-color-scheme: light)">
