--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
   <meta name="twitter:creator" content="@FranciscoLarrosa">
   
   <!-- Favicon -->
-  <base href="/BioMind/">
+  <base href="/">
   <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
