Refactor landing page and index.html for improved accessibility and SEO
- Enhanced accessibility by adding ARIA roles and labels to navigation and buttons.
- Updated meta tags in index.html for better SEO optimization.
- Improved styling consistency and readability in landing.html.
- Added descriptive alt text for images and improved button labels.

--- a/src/index.html
+++ b/src/index.html
@@ -1,56 +1,117 @@
-<!doctype html>
-<html lang="es">
-<head>
-  <meta charset="utf-8">
-  
-  <!-- Primary Meta Tags -->
-  <title>BioMind - Análisis Médicos Inteligentes con IA | Portfolio Francisco Larrosa</title>
-  <meta name="title" content="BioMind - Análisis Médicos Inteligentes con IA">
-  <meta name="description" content="Plataforma innovadora que utiliza Inteligencia Artificial para analizar estudios médicos y proporcionar interpretaciones claras en segundos. Proyecto de portfolio desarrollado con Angular 20 y Google Gemini AI.">
-  <meta name="keywords" content="inteligencia artificial, análisis médicos, AI healthcare, Angular, Gemini AI, Francisco Larrosa, portfolio desarrollo, health tech">
-  <meta name="author" content="Francisco Larrosa">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://franciscolarrosa96.github.io/BioMind/">
-  <meta property="og:title" content="BioMind - Análisis Médicos Inteligentes con IA">
-  <meta property="og:description" content="Plataforma que utiliza IA para analizar estudios médicos y proporcionar interpretaciones claras. Desarrollado con Angular 20 y Google Gemini AI.">
-  <meta property="og:image" content="https://franciscolarrosa96.github.io/BioMind/assets/previa.png">
-  <meta property="og:site_name" content="BioMind">
-  <meta property="og:locale" content="es_AR">
-  
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://franciscolarrosa96.github.io/BioMind/">
-  <meta name="twitter:title" content="BioMind - Análisis Médicos Inteligentes con IA">
-  <meta name="twitter:description" content="Plataforma que utiliza IA para analizar estudios médicos y proporcionar interpretaciones claras en segundos.">
-  <meta name="twitter:image" content="https://franciscolarrosa96.github.io/BioMind/assets/previa.png">
-  <meta name="twitter:creator" content="@FranciscoLarrosa">
-  
-  <!-- Favicon -->
-  <base href="/">
-  <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
-  <link rel="manifest" href="manifest.json">
-  
-  <!-- Theme Color -->
-  <meta name="theme-color" content="#0891b2" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#164e63" media="(prefers-color-scheme: dark)">
-  
-  <!-- FontAwesome Optimizado -->
-  <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin>
-  <link rel="dns-prefetch" href="https://kit.fontawesome.com">
-  
-  <!-- Preconnect to Google Fonts (if used) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-</head>
-<body>
-  <app-root></app-root>
+<!DOCTYPE html>
+<html lang="es-AR">
+  <head>
+    <meta charset="utf-8" />
+
+    <!-- Primary Meta Tags -->
+    <title>
+      BioMind - Análisis Médicos Inteligentes con IA | Portfolio Francisco
+      Larrosa
+    </title>
+    <meta
+      name="title"
+      content="BioMind - Análisis Médicos Inteligentes con IA"
+    />
+    <meta
+      name="description"
+      content="Plataforma innovadora que utiliza Inteligencia Artificial para analizar estudios médicos y proporcionar interpretaciones claras en segundos. Proyecto de portfolio desarrollado con Angular 20 y Google Gemini AI."
+    />
+    <meta
+      name="keywords"
+      content="inteligencia artificial, análisis médicos, AI healthcare, Angular, Gemini AI, Francisco Larrosa, portfolio desarrollo, health tech"
+    />
+    <meta name="author" content="Francisco Larrosa" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://franciscolarrosa96.github.io/BioMind/"
+    />
+    <meta
+      property="og:title"
+      content="BioMind - Análisis Médicos Inteligentes con IA"
+    />
+    <meta
+      property="og:description"
+      content="Plataforma que utiliza IA para analizar estudios médicos y proporcionar interpretaciones claras. Desarrollado con Angular 20 y Google Gemini AI."
+    />
+    <meta
+      property="og:image"
+      content="https://franciscolarrosa96.github.io/BioMind/assets/previa.png"
+    />
+    <meta property="og:site_name" content="BioMind" />
+    <meta property="og:locale" content="es_AR" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:url"
+      content="https://franciscolarrosa96.github.io/BioMind/"
+    />
+    <meta
+      name="twitter:title"
+      content="BioMind - Análisis Médicos Inteligentes con IA"
+    />
+    <meta
+      name="twitter:description"
+      content="Plataforma que utiliza IA para analizar estudios médicos y proporcionar interpretaciones claras en segundos."
+    />
+    <meta
+      name="twitter:image"
+      content="https://franciscolarrosa96.github.io/BioMind/assets/previa.png"
+    />
+    <meta name="twitter:creator" content="@FranciscoLarrosa" />
+
+    <!-- Favicon -->
+    <base href="/" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon-16x16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="manifest.json" />
+
+    <!-- Theme Color -->
+    <meta
+      name="theme-color"
+      content="#0891b2"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#164e63"
+      media="(prefers-color-scheme: dark)"
+    />
+
+    <!-- FontAwesome Optimizado -->
+    <link rel="preconnect" href="https://kit.fontawesome.com" crossorigin />
+    <link rel="dns-prefetch" href="https://kit.fontawesome.com" />
+
+    <!-- Preconnect to Google Fonts (if used) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
+  <body>
+    <app-root></app-root>
     <!-- ✅ FontAwesome Script -->
-  <script src="https://kit.fontawesome.com/cb0353dbc0.js" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/cb0353dbc0.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
