feat: replace PNG image with AVIF format for improved performance and update meta tags accordingly

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="https://franciscolarrosa96.github.io/BioMind/">
   <meta property="og:title" content="BioMind - Análisis Médicos Inteligentes con IA">
   <meta property="og:description" content="Plataforma que utiliza IA para analizar estudios médicos y proporcionar interpretaciones claras. Desarrollado con Angular 20 y Google Gemini AI.">
-  <meta property="og:image" content="https://franciscolarrosa96.github.io/BioMind/assets/previa.png">
+  <meta property="og:image" content="https://franciscolarrosa96.github.io/BioMind/assets/previa.avif">
   <meta property="og:site_name" content="BioMind">
   <meta property="og:locale" content="es_AR">
   
@@ -25,7 +25,7 @@
   <meta name="twitter:url" content="https://franciscolarrosa96.github.io/BioMind/">
   <meta name="twitter:title" content="BioMind - Análisis Médicos Inteligentes con IA">
   <meta name="twitter:description" content="Plataforma que utiliza IA para analizar estudios médicos y proporcionar interpretaciones claras en segundos.">
-  <meta name="twitter:image" content="https://franciscolarrosa96.github.io/BioMind/assets/previa.png">
+  <meta name="twitter:image" content="https://franciscolarrosa96.github.io/BioMind/assets/previa.avif">
   <meta name="twitter:creator" content="@FranciscoLarrosa">
   
   <!-- Favicon -->
